--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ canvas.confetti{position:fixed;inset:0;pointer-events:none;z-index:10}
 
 <script>
 const finalImageSrc="partner.jpg";
-const finalMessageText="Thank you for always choosing me. You are my calm, my chaos, and my home. Happy Valentine’s Day ❤️";
+const finalMessageText="Thank you for always choosing me. You are my calm, my chaos, and my home. Happy Valentine’s Month ❤️ and Welcome back home ";
 
 const steps=[
  { text:"Oh. Starting with no huh 😅", anim:"clouds" },
